[gd_scene load_steps=4 format=3 uid="uid://c7t6j8i2b2e3y"]

[ext_resource type="Script" path="res://scripts/entities/Player.gd" id="1_scripts_Player"]
[ext_resource type="Texture2D" path="res://assets/player.png" id="2_texture_Icon"]
[ext_resource type="PackedScene" uid="uid://hpbar_scene" path="res://scenes/ui/HPBar.tscn" id="3_hpbar"]
[ext_resource type="Script" path="res://scripts/core/HealthComponent.gd" id="5"]
[ext_resource type="Script" path="res://scripts/core/MovementComponent.gd" id="6"]
[ext_resource type="Script" path="res://scripts/core/CombatComponent.gd" id="7"]
[ext_resource type="Script" path="res://scripts/core/VisualsComponent.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://damage_number" path="res://scenes/ui/DamageNumber.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://highlights_scene" path="res://scenes/ui/Highlights.tscn" id="10"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1"]
properties/0/path = NodePath("MovementComponent:target_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 0
properties/2/path = NodePath("HealthComponent:current_health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:target_enemy_path")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_being_attacked")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(28, 28)

[node name="Player" type="CharacterBody2D" groups=["players"]]
y_sort_enabled = true
script = ExtResource("1_scripts_Player")
unit_name = "Player"
max_hp = 100
attack = 10
defense = 10
speed = 200.0
attack_interval = 1.5
regen_hp = 1.0
regen_interval = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_texture_Icon")
hframes = 9
vframes = 5
frame = 0

[node name="Highlights" parent="." instance=ExtResource("10")]

[node name="HPBar" parent="." instance=ExtResource("3_hpbar")]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("6")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("7")

[node name="VisualsComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "hp_bar", "target_highlight", "attacker_highlight")]
script = ExtResource("8")
sprite = NodePath("../Sprite2D")
hp_bar = NodePath("../HPBar")
target_highlight = NodePath("../Highlights/TargetHighlight")
attacker_highlight = NodePath("../Highlights/AttackerHighlight")
damage_number_scene = ExtResource("9")
use_directional_sprites = true
sprite_offset_y = -12.0
horizontal_priority = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
